--- a/src/frontend/scss/templates/courses/cms/_person_detail.scss
+++ b/src/frontend/scss/templates/courses/cms/_person_detail.scss
@@ -36,7 +36,6 @@ $richie-person-detail-media-width: 120px;
         $media-width: $richie-person-detail-media-width,
         $methodology: 'bem'
       );
-      max-width: 50%;
     }
 
     &__media {
