--- a/src/frontend/scss/templates/richie/section/_section.scss
+++ b/src/frontend/scss/templates/richie/section/_section.scss
@@ -1,7 +1,7 @@
 $richie-section-highlights-padding-top: 3rem !default;
 $richie-section-highlights-padding: $richie-section-highlights-padding-top 1rem !default;
 $richie-section-highlights-background-even: $white !default;
-$richie-section-highlights-background-odd: $gray98 !default;
+$richie-section-highlights-background-odd: $snow2 !default;
 $richie-section-highlights-title-color: $gray17 !default;
 $richie-section-highlights-title-margin: 0 auto 1rem !default;
 $richie-section-highlights-title-padding: 1rem !default;
